--- a/Youtube/src/pages/Pages-Css/HomePage.css
+++ b/Youtube/src/pages/Pages-Css/HomePage.css
@@ -1,6 +1,7 @@
 .home-container{
     display: flex;
+    color: white;
     width: 100%;
-    padding: 4.6vw 1vw 2vw 0vw;
-    background-color: black;
+    margin-top: 4.6vw;
+    background-color: rgb(202, 19, 19);
 }
