Adding Profile page and using react-router for navigation and some more changes

--- a/Youtube/src/components/Comp-Css/Navbar.css
+++ b/Youtube/src/components/Comp-Css/Navbar.css
@@ -18,6 +18,10 @@ nav{
     margin-right: 20px;
     cursor: pointer;
 }
+.youtube_icon{
+    display: flex;
+    align-items: center;
+}
 .inner-left span{
     font-size: 1.4vw;
     font-weight: 500;
