--- a/Youtube/src/pages/Pages-Css/Login.css
+++ b/Youtube/src/pages/Pages-Css/Login.css
@@ -42,3 +42,14 @@
 .login_div p a{
     color: red;
 }
+.toggle_password{
+    display: flex;
+    position: relative;
+}
+.toggle_style{
+    position:absolute;
+    right:7%;
+    top:17%;
+    cursor: pointer;
+    color:red
+}
